examples/test/testpolicy8013.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8013
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key19: value49
      key43: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value48
          key2: value47
      podSelector:
        matchLabels:
          key42: value42
          key35: value22
          key47: value14
